2008-09-22  Benjamin Mack  <benni@typo3.org>

	* Integrated mod_info into main DAM 1.1 (is the one below)
	* Fixed issue #8466: Info module does not show any information (blank main frame) (thanks to David Steeb)

2008-09-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #9123: Alternative Filemounts for element browser

2008-09-20  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9247: Bug: Indexing of IPTC-Data can't work (Thanks to Steffen Gebert)

2008-09-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8369: Add possibility to have media_type icons as PNGs as well (Thanks to Andreas Balzer)
	* Fixed bug #4933: Category/folder association (Thanks to David Steeb)
	* Fixed bug #8365: Cleanup class.ext_update.php

2008-08-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9197: Misbehaviour of DAM media tab in htmlArea RTE link insertion dialogue

2008-08-13  Dan Osipov  <dosipov@phillyburbs.com>

	* Fixed bug #8598: Media > File: Icons are hidden by Fieldsize in IE 7.0

2008-08-12  Stanislas Rolland  <typo3@sjbr.ca>

	* DAM 1.1.0 requires TYPO3 4.2.2

2008-08-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9113: Render new image in RTE-enabled content when the file name is changed in DAM record

2008-08-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issues #8673 and #8599: Correction for drag and drop

2008-07-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #8673: Incorrect handling of images in the RTE with TYPO3 4.2 and trunk DAM
	* Fixed bug #8599: Replace dam extension of tx_rtehtmlarea_browse_links with implementation of interface t3lib_browselinkshook

2008-05-30  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7342-1: dam_catedit doesn't work properly with 4.2-trunk (clickmenu javascript error), part 1

2008-05-28  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8528: DAM always resolves a DRAFT workspace version of records, can't get the LIVE version
	* Bumped version to 1.1.0-dev

2008-05-19  Ingo Renner  <ingo@typo3.org>
